--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .square {
   width: 50px;
   height: 50px;
-  background: black;
+  border-radius: 50%;
+  background: rgb(167, 105, 105);
   position: absolute;
 }
